add check user middleware and registration callback query
